--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -49,5 +49,5 @@ jobs:
         dotnet nuget push "src/Sekiban.Aspire.Infrastructure.Cosmos/bin/Release/Sekiban.Aspire.Infrastructure.Cosmos.${{ github.event.release.tag_name }}-preview.nupkg" --api-key ${{secrets.NUGET_APIKEY}}  --source https://api.nuget.org/v3/index.json
     - name: Pack Cosmos Postgres
       run: |
-        dotnet nuget push "src/Sekiban.Infrastructure.Postgres/bin/Release/Sekiban.Infrastructure.Postgres.${{ github.event.release.tag_name }}-preview.nupkg" --api-key ${{secrets.NUGET_APIKEY}}  --source https://api.nuget.org/v3/index.json
+        dotnet nuget push "src/Sekiban.Infrastructure.Postgres/bin/Release/Sekiban.Infrastructure.Postgres.${{ github.event.release.tag_name }}.nupkg" --api-key ${{secrets.NUGET_APIKEY}}  --source https://api.nuget.org/v3/index.json
   
