--- a/internalUsages/FeatureCheck.WebApi.Dynamo/appsettings.json
+++ b/internalUsages/FeatureCheck.WebApi.Dynamo/appsettings.json
@@ -8,7 +8,7 @@
   "Sekiban": {
     "Default": {
       "AWS": {
-        "DynamoRegion": "ap-northeast-1",
+        "DynamoRegion": "us-west-1",
         "AccessKeyId": "[Set your dynamo db access id here]",
         "AccessKey": "[Set your dynamo db access key here]",
         "DynamoItemsTable": "jjlt_items",
