--- a/src/Sekiban.Infrastructure.Aws.S3/Sekiban.Infrastructure.Aws.S3.csproj
+++ b/src/Sekiban.Infrastructure.Aws.S3/Sekiban.Infrastructure.Aws.S3.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageId>Sekiban.Infrastructure.Dynamo</PackageId>
+        <PackageId>Sekiban.Infrastructure.Aws.S3</PackageId>
         <Version>0.17.10</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
-        <PackageDescription>Sekiban - Event Sourcing Framework Dynamo Infrastructure</PackageDescription>
+        <PackageDescription>Sekiban - Event Sourcing Framework AWS S3 Infrastructure</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
         <PackageVersion>0.17.10</PackageVersion>
         <Description>Fix Retrieval Option returns snapshot</Description>
@@ -20,17 +20,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.17"/>
+        <PackageReference Include="AWSSDK.S3" Version="3.7.305.30"/>
+        <PackageReference Include="SharpZipLib" Version="1.4.2"/>
         <PackageReference Include="Sekiban.Core" Version="0.17.10"/>
-        <PackageReference Include="Sekiban.Infrastructure.Aws.S3" Version="0.17.10"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Sekiban.Core\Sekiban.Core.csproj"/>
-        <ProjectReference Include="..\Sekiban.Infrastructure.Aws.S3\Sekiban.Infrastructure.Aws.S3.csproj"/>
-        <ProjectReference Include="..\Sekiban.Testing\Sekiban.Testing.csproj"/>
     </ItemGroup>
 
 </Project>
