--- a/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.ApiService/appsettings.Development.json
+++ b/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.ApiService/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Sekiban" : {
+    "Default" : {
+      "Azure" : {
+        "BlobConnectionStringName" : "SekibanAspireBlob"
+      },
+      "Postgres" : {
+        "ConnectionStringName" : "SekibanAspirePostgres"
+      }
+    }
   }
 }
