--- a/src/Sekiban.Aspire.Infrastructure.Cosmos/Sekiban.Aspire.Infrastructure.Cosmos.csproj
+++ b/src/Sekiban.Aspire.Infrastructure.Cosmos/Sekiban.Aspire.Infrastructure.Cosmos.csproj
@@ -6,12 +6,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sekiban.Aspire.Infrastructure.Cosmos</PackageId>
-        <Version>0.18.1-preview</Version>
+        <Version>0.18.2-preview</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Cosmos Aspire Connector</PackageDescription>
-        <PackageVersion>0.18.1-preview</PackageVersion>
-        <Description>Release Postgres and Refactor Infrastructures</Description>
+        <PackageVersion>0.18.2-preview</PackageVersion>
+        <Description>Update to Aspire 8.0 Preview 4</Description>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
         <RootNamespace>Sekiban.Aspire.Infrastructure.Cosmos</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -22,16 +22,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.0-preview.3.24105.21"/>
-        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.18.1"/>
-        <PackageReference Include="Sekiban.Web" Version="0.18.1"/>
+        <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.0-preview.4.24156.9" />
+        <PackageReference Include="Sekiban.Infrastructure.Cosmos" Version="0.18.2"/>
+        <PackageReference Include="Sekiban.Web" Version="0.18.2"/>
         <ProjectReference Include="..\Sekiban.Infrastructure.Cosmos\Sekiban.Infrastructure.Cosmos.csproj"/>
         <ProjectReference Include="..\Sekiban.Web\Sekiban.Web.csproj"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="8.0.0-preview.3.24105.21"/>
+        <PackageReference Include="Aspire.Microsoft.Azure.Cosmos" Version="8.0.0-preview.4.24156.9" />
     </ItemGroup>
 
 </Project>
