--- a/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
+++ b/src/Sekiban.Infrastructure.Dynamo/Sekiban.Infrastructure.Dynamo.csproj
@@ -4,13 +4,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sekiban.Infrastructure.Dynamo</PackageId>
-        <Version>0.18.1</Version>
+        <Version>0.18.2</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Dynamo Infrastructure</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.18.1</PackageVersion>
-        <Description>Release Postgres and Refactor Infrastructures</Description>
+        <PackageVersion>0.18.2</PackageVersion>
+        <Description>Update to Aspire 8.0 Preview 4</Description>
         <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
         <LangVersion>preview</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -21,8 +21,8 @@
 
     <ItemGroup>
         <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.301.17"/>
-        <PackageReference Include="Sekiban.Core" Version="0.18.1"/>
-        <PackageReference Include="Sekiban.Infrastructure.Aws.S3" Version="0.18.1"/>
+        <PackageReference Include="Sekiban.Core" Version="0.18.2"/>
+        <PackageReference Include="Sekiban.Infrastructure.Aws.S3" Version="0.18.2"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0"/>
     </ItemGroup>
