--- a/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.AppHost/AspireAndSekibanSample.AppHost.csproj
+++ b/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.AppHost/AspireAndSekibanSample.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -16,8 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.4.24156.9" />
-    <PackageReference Include="Aspire.Hosting.Azure.Provisioning" Version="8.0.0-preview.4.24156.9" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.5.24201.12" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.5.24201.12" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.0.0-preview.5.24201.12" />
   </ItemGroup>
 
 </Project>
