--- a/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.AppHost/Properties/launchSettings.json
+++ b/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.AppHost/Properties/launchSettings.json
@@ -9,7 +9,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16078"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16078",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
       }
     }
   }
