--- a/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.ApiService/AspireAndSekibanSample.ApiService.csproj
+++ b/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.ApiService/AspireAndSekibanSample.ApiService.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Sekiban.Aspire.Infrastructure.Cosmos" Version="0.18.4-preview" />
     <PackageReference Include="Sekiban.Infrastructure.Postgres" Version="0.18.4" />
     <PackageReference Include="Sekiban.Web" Version="0.18.4" />
