--- a/tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
+++ b/tests/Sekiban.Test.CosmosDb/Sekiban.Test.CosmosDb.csproj
@@ -2,12 +2,10 @@
 
     <PropertyGroup>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
-
         <LangVersion>preview</LangVersion>
         <OpenApiGenerateDocuments>false</OpenApiGenerateDocuments>
-        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+        <TargetFramework>net8.0</TargetFramework>
         <UserSecretsId>55f43f08-0c5d-41bd-8846-13832dbc5714</UserSecretsId>
         <RootNamespace>Sekiban.Test.CosmosDb</RootNamespace>
         <AssemblyName>Sekiban.Test.CosmosDb</AssemblyName>
