--- a/src/Sekiban.Testing/Sekiban.Testing.csproj
+++ b/src/Sekiban.Testing/Sekiban.Testing.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Testing</PackageId>
-        <Version>0.18.5</Version>
+        <Version>0.19.0</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Testing</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.18.5</PackageVersion>
+        <PackageVersion>0.19.0</PackageVersion>
         <Description>Change Postgres Migration Class Name - Postgres Tables needs to be reset. Aspire Preview 5 Support</Description>
         <AssemblyName>Sekiban.Testing</AssemblyName>
         <RootNamespace>Sekiban.Testing</RootNamespace>
@@ -23,10 +23,10 @@
         <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0"/>
         <PackageReference Include="xunit.assert" Version="2.7.0"/>
-        <PackageReference Include="xunit.extensibility.core" Version="2.7.1" />
-        <PackageReference Include="Sekiban.Core" Version="0.18.5"/>
+        <PackageReference Include="xunit.extensibility.core" Version="2.7.1"/>
+        <PackageReference Include="Sekiban.Core" Version="0.19.0"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
-        <PackageReference Include="xunit.extensibility.execution" Version="2.7.1" />
+        <PackageReference Include="xunit.extensibility.execution" Version="2.7.1"/>
     </ItemGroup>
     <ItemGroup>
         <None Update="host.json">
