--- a/tests/FeatureCheck.Test/FeatureCheck.Test.csproj
+++ b/tests/FeatureCheck.Test/FeatureCheck.Test.csproj
@@ -2,11 +2,8 @@
 
     <PropertyGroup>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
-
-        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
-
+        <TargetFramework>net8.0</TargetFramework>
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
 
