--- a/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.ApiService.Postgres/AspireAndSekibanSample.ApiService.Postgres.csproj
+++ b/Samples/Tutorials/AspireAndSekibanSample/AspireAndSekibanSample.ApiService.Postgres/AspireAndSekibanSample.ApiService.Postgres.csproj
@@ -7,13 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.6.24214.1" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
-        <PackageReference Include="Sekiban.Aspire.Infrastructure.Cosmos" Version="0.18.5-preview" />
-        <PackageReference Include="Sekiban.Core" Version="0.18.5" />
-        <PackageReference Include="Sekiban.Infrastructure.Postgres" Version="0.18.5" />
-        <PackageReference Include="Sekiban.Web" Version="0.18.5" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
+        <PackageReference Include="Sekiban.Aspire.Infrastructure.Cosmos" Version="0.19.1" />
+        <PackageReference Include="Sekiban.Core" Version="0.19.1" />
+        <PackageReference Include="Sekiban.Infrastructure.Postgres" Version="0.19.1" />
+        <PackageReference Include="Sekiban.Web" Version="0.19.1" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
