--- a/src/Sekiban.Testing/Sekiban.Testing.csproj
+++ b/src/Sekiban.Testing/Sekiban.Testing.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Testing</PackageId>
-        <Version>0.19.1</Version>
+        <Version>0.19.2</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework Testing</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.19.1</PackageVersion>
-        <Description>Change Postgres Migration Class Name - Postgres Tables needs to be reset. Aspire Preview 5 Support</Description>
+        <PackageVersion>0.19.2</PackageVersion>
+        <Description>Removed init from ITenantCommandCommon</Description>
         <AssemblyName>Sekiban.Testing</AssemblyName>
         <RootNamespace>Sekiban.Testing</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -24,7 +24,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0"/>
         <PackageReference Include="xunit.assert" Version="2.8.0" />
         <PackageReference Include="xunit.extensibility.core" Version="2.8.0" />
-        <PackageReference Include="Sekiban.Core" Version="0.19.1"/>
+        <PackageReference Include="Sekiban.Core" Version="0.19.2"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
         <PackageReference Include="xunit.extensibility.execution" Version="2.8.0" />
     </ItemGroup>
