--- a/internalUsages/FeatureCheck.WebApi/FeatureCheck.WebApi.csproj
+++ b/internalUsages/FeatureCheck.WebApi/FeatureCheck.WebApi.csproj
@@ -10,7 +10,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.9.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.9.0"/>
     </ItemGroup>
 
     <ItemGroup>
